crates/crochet_parser/src/snapshots/crochet_parser__tests__if_let-6.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"if let {x: 5, y} = p { y } else { 0 }\")"
---
Program {
    body: [
        Expr {
            span: 0..37,
            expr: IfElse(
                IfElse {
                    span: 0..37,
                    cond: LetExpr(
                        LetExpr {
                            span: 7..20,
                            pat: Object(
                                ObjectPat {
                                    span: 7..17,
                                    props: [
                                        KeyValue(
                                            KeyValuePatProp {
                                                key: Ident {
                                                    span: 8..9,
                                                    name: "x",
                                                },
                                                value: Lit(
                                                    LitPat {
                                                        span: 11..12,
                                                        lit: Num(
                                                            Num {
                                                                span: 11..12,
                                                                value: "5",
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                        Assign(
                                            AssignPatProp {
                                                span: 14..15,
                                                key: Ident {
                                                    span: 14..15,
                                                    name: "y",
                                                },
                                                value: None,
                                            },
                                        ),
                                    ],
                                    optional: false,
                                    type_ann: None,
                                },
                            ),
                            expr: Ident(
                                Ident {
                                    span: 19..20,
                                    name: "p",
                                },
                            ),
                        },
                    ),
                    consequent: Ident(
                        Ident {
                            span: 23..24,
                            name: "y",
                        },
                    ),
                    alternate: Some(
                        Lit(
                            Num(
                                Num {
                                    span: 34..35,
                                    value: "0",
                                },
                            ),
                        ),
                    ),
                },
            ),
        },
    ],
}
