crates/crochet_parser/src/snapshots/crochet_parser__tests__it_works.snap
---
source: crates/crochet_parser/src/lib.rs
expression: parse(src)
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 9..35,
                pattern: Ident(
                    BindingIdent {
                        span: 13..16,
                        id: Ident {
                            span: 13..16,
                            name: "add",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Expr {
                        span: 19..34,
                        kind: Lambda(
                            Lambda {
                                params: [
                                    EFnParam {
                                        pat: Ident(
                                            EFnParamBindingIdent {
                                                span: 20..21,
                                                id: Ident {
                                                    span: 20..21,
                                                    name: "a",
                                                },
                                            },
                                        ),
                                        type_ann: None,
                                        optional: false,
                                        mutable: false,
                                    },
                                    EFnParam {
                                        pat: Ident(
                                            EFnParamBindingIdent {
                                                span: 23..24,
                                                id: Ident {
                                                    span: 23..24,
                                                    name: "b",
                                                },
                                            },
                                        ),
                                        type_ann: None,
                                        optional: false,
                                        mutable: false,
                                    },
                                ],
                                body: Expr {
                                    span: 29..34,
                                    kind: BinaryExpr(
                                        BinaryExpr {
                                            op: Add,
                                            left: Expr {
                                                span: 29..30,
                                                kind: Ident(
                                                    Ident {
                                                        span: 29..30,
                                                        name: "a",
                                                    },
                                                ),
                                            },
                                            right: Expr {
                                                span: 33..34,
                                                kind: Ident(
                                                    Ident {
                                                        span: 33..34,
                                                        name: "b",
                                                    },
                                                ),
                                            },
                                        },
                                    ),
                                },
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                    },
                ),
                declare: false,
            },
            VarDecl {
                span: 44..70,
                pattern: Ident(
                    BindingIdent {
                        span: 48..51,
                        id: Ident {
                            span: 48..51,
                            name: "sub",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Expr {
                        span: 54..69,
                        kind: Lambda(
                            Lambda {
                                params: [
                                    EFnParam {
                                        pat: Ident(
                                            EFnParamBindingIdent {
                                                span: 55..56,
                                                id: Ident {
                                                    span: 55..56,
                                                    name: "a",
                                                },
                                            },
                                        ),
                                        type_ann: None,
                                        optional: false,
                                        mutable: false,
                                    },
                                    EFnParam {
                                        pat: Ident(
                                            EFnParamBindingIdent {
                                                span: 58..59,
                                                id: Ident {
                                                    span: 58..59,
                                                    name: "b",
                                                },
                                            },
                                        ),
                                        type_ann: None,
                                        optional: false,
                                        mutable: false,
                                    },
                                ],
                                body: Expr {
                                    span: 64..69,
                                    kind: BinaryExpr(
                                        BinaryExpr {
                                            op: Sub,
                                            left: Expr {
                                                span: 64..65,
                                                kind: Ident(
                                                    Ident {
                                                        span: 64..65,
                                                        name: "a",
                                                    },
                                                ),
                                            },
                                            right: Expr {
                                                span: 68..69,
                                                kind: Ident(
                                                    Ident {
                                                        span: 68..69,
                                                        name: "b",
                                                    },
                                                ),
                                            },
                                        },
                                    ),
                                },
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                    },
                ),
                declare: false,
            },
            VarDecl {
                span: 79..100,
                pattern: Ident(
                    BindingIdent {
                        span: 83..86,
                        id: Ident {
                            span: 83..86,
                            name: "sum",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Expr {
                        span: 89..99,
                        kind: App(
                            App {
                                lam: Expr {
                                    span: 89..92,
                                    kind: Ident(
                                        Ident {
                                            span: 89..92,
                                            name: "add",
                                        },
                                    ),
                                },
                                args: [
                                    ExprOrSpread {
                                        spread: None,
                                        expr: Expr {
                                            span: 93..94,
                                            kind: Lit(
                                                Num(
                                                    Num {
                                                        span: 93..94,
                                                        value: "5",
                                                    },
                                                ),
                                            ),
                                        },
                                    },
                                    ExprOrSpread {
                                        spread: None,
                                        expr: Expr {
                                            span: 96..98,
                                            kind: Lit(
                                                Num(
                                                    Num {
                                                        span: 96..98,
                                                        value: "10",
                                                    },
                                                ),
                                            ),
                                        },
                                    },
                                ],
                            },
                        ),
                    },
                ),
                declare: false,
            },
        ],
    },
)
