crates/crochet_parser/src/snapshots/crochet_parser__tests__jsx-10.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let elem = <div point={point} id=\\\"point\\\">Hello, {msg}</div>;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..60,
                pattern: Pattern {
                    span: 4..8,
                    kind: Ident(
                        BindingIdent {
                            name: "elem",
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 11..59,
                        kind: JSXElement(
                            JSXElement {
                                span: 11..59,
                                name: "div",
                                attrs: [
                                    JSXAttr {
                                        span: 16..29,
                                        ident: Ident {
                                            span: 16..21,
                                            name: "point",
                                        },
                                        value: JSXExprContainer(
                                            JSXExprContainer {
                                                span: 22..29,
                                                expr: Expr {
                                                    span: 23..28,
                                                    kind: Ident(
                                                        Ident {
                                                            span: 23..28,
                                                            name: "point",
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                    },
                                    JSXAttr {
                                        span: 30..40,
                                        ident: Ident {
                                            span: 30..32,
                                            name: "id",
                                        },
                                        value: Lit(
                                            Str(
                                                Str {
                                                    span: 33..40,
                                                    value: "point",
                                                },
                                            ),
                                        ),
                                    },
                                ],
                                children: [
                                    JSXText(
                                        JSXText {
                                            span: 41..48,
                                            value: "Hello, ",
                                        },
                                    ),
                                    JSXExprContainer(
                                        JSXExprContainer {
                                            span: 48..53,
                                            expr: Expr {
                                                span: 49..52,
                                                kind: Ident(
                                                    Ident {
                                                        span: 49..52,
                                                        name: "msg",
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                        },
                                    ),
                                ],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
