crates/crochet_parser/src/snapshots/crochet_parser__tests__jsx-5.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"<Foo></Foo>\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..11,
                expr: Expr {
                    span: 0..11,
                    kind: JSXElement(
                        JSXElement {
                            span: 0..11,
                            name: "Foo",
                            attrs: [],
                            children: [],
                        },
                    ),
                },
            },
        ],
    },
)
